Add --add-exports javac flags, so javac classes are accessible